[tool.poetry]
name = "capricious-data-streams"
version = "0.1.0"
description = ""
authors = ["Thomas Falconer <tomdfalc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
tensorflow = {version = ">=2.9.1", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = ">=2.9.1", markers = "sys_platform == 'darwin'"}
ipykernel = "^6.27.0"
tensorflow-probability = "^0.23.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
